--- a/network-test/alb-ingress.yaml
+++ b/network-test/alb-ingress.yaml
@@ -12,7 +12,7 @@ metadata:
 #    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:<ACCOUNT_ID>:certificate/<CERTIFICATE_ID>
 #    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
 #    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
-  namespace: alb-ingress-05
+  namespace: alb-test-01
 spec:
   rules:
     - http:
