--- a/network-test/alb-service.yaml
+++ b/network-test/alb-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-service
-  namespace: alb-ingress-05
+  namespace: alb-test-01
 spec:
   type: NodePort
   ports:
