--- a/network-test/multus-ipvlan-2.yaml
+++ b/network-test/multus-ipvlan-2.yaml
@@ -2,7 +2,7 @@ apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: ipvlan-conf-2
-  namespace: multus-test-01
+#  namespace: multus-test-01
 spec:
   config: '{
       "cniVersion": "0.3.0",
@@ -11,9 +11,9 @@ spec:
       "mode": "l3",
       "ipam": {
         "type": "host-local",
-        "subnet": "10.0.4.0/24",
-        "rangeStart": "10.0.4.70",
-        "rangeEnd": "10.0.4.80",
-        "gateway": "10.0.4.1"
+        "subnet": "10.0.6.0/24",
+        "rangeStart": "10.0.6.70",
+        "rangeEnd": "10.0.6.80",
+        "gateway": "10.0.6.1"
       }
     }'
