--- a/network-test/multus-test-01-cni.yaml
+++ b/network-test/multus-test-01-cni.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: multus-pod-cni
 #name space change 
-  namespace: multus-test-01
+#  namespace: multus-test-01
 spec:
   replicas: 1
   selector:
