--- a/network-test/multus-ipvlan-1.yaml
+++ b/network-test/multus-ipvlan-1.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   config: '{
       "cniVersion": "0.3.0",
-      "type": "ipvlan",
+      "type": "host-device",
       "master": "eth1",
       "mode": "l3",
       "ipam": {
