--- a/eksworkshop-cluster-3az.yaml
+++ b/eksworkshop-cluster-3az.yaml
@@ -9,52 +9,30 @@ metadata:
   version: "1.20"
 
 vpc: 
-<<<<<<< HEAD
-  id: vpc-059327f8be00d2896
-=======
-  id: vpc-03ed7aed51f1de47d
->>>>>>> 0087b22fca19184627eb43da41f6977f8bb40459
+  id: $vpc_ID
   subnets:
     public:
 #      ap-northeast-2a: { id: subnet-0dabdc92b066581ad}
 #      ap-northeast-2b: { id: subnet-0ede38666dec3b35f}
 #      ap-northeast-2c: { id: subnet-01b9091263c4b30fa}
       PublicSubnet01:
-<<<<<<< HEAD
-        id: subnet-02755155576f9e9b6
+        id: ${PublicSubnet01}
       PublicSubnet02:
-        id: subnet-0683a5a8213c1d806
+        id: ${PublicSubnet02}
       PublicSubnet03:
-        id: subnet-07a644de7ba0211be
-=======
-        id: subnet-09db14a252ad992fa
-      PublicSubnet02:
-        id: subnet-06bea507ed6d548cb
-      PublicSubnet03:
-        id: subnet-0b6452f27f468d999
->>>>>>> 0087b22fca19184627eb43da41f6977f8bb40459
+        id: ${PublicSubnet03}
     private:
 #      ap-northeast-2a: { id: subnet-0262f5b422602c335}
 #      ap-northeast-2b: { id: subnet-0e858cd46e3bd6cb1}
 #      ap-northeast-2c: { id: subnet-0f1eedd72ed2aa9be}
       PrivateSubnet01:
-<<<<<<< HEAD
-        id: subnet-07d02d4ba8b7285c8
+        id: ${PrivateSubnet01}
       PrivateSubnet02:
-        id: subnet-055d79fd799a4e358
+        id: ${PrivateSubnet02}
       PrivateSubnet03:
-        id: subnet-04148964f2d3e2e9a
+        id: ${PrivateSubnet03}
 secretsEncryption:
-  keyARN: arn:aws:kms:ap-northeast-2:009214743063:key/505371c5-9d81-4723-9ce1-2a4d2366bac0
-=======
-        id: subnet-0c43b1a723b588abc
-      PrivateSubnet02:
-        id: subnet-05fea9d089d315f31
-      PrivateSubnet03:
-        id: subnet-01f5d75394729be47
-secretsEncryption:
-  keyARN: arn:aws:kms:ap-northeast-2:371940739105:key/fe8a9bb7-5fd4-460c-a128-b96bbcdf5b7f
->>>>>>> 0087b22fca19184627eb43da41f6977f8bb40459
+  keyARN: $MASTER_ARN
 
 nodeGroups:
   - name: ng-public-01
