--- a/network-test/alb-test-01-serivce-green.yaml
+++ b/network-test/alb-test-01-serivce-green.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: alb-test-03
-  namespace: alb-test-03
+  name: alb-test-01-green
+  namespace: alb-test-01
 spec:
   selector:
-    app: alb-test-03
+    app: alb-test-01-green
   ports:
   type: NodePort
   ports:
