--- a/network-test/alb-ing-04-service.yaml
+++ b/network-test/alb-ing-04-service.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
     service.beta.kubernetes.io/aws-load-balancer-type: "external"
+    service.beta.kubernetes.io/aws-load-balancer-name: "alb-ing-04"
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
   namespace: alb-ing-04
 spec:
