--- a/EKSVPC3AZ.yml
+++ b/EKSVPC3AZ.yml
@@ -16,9 +16,9 @@ Metadata:
           - PublicSubnet01Block
           - PublicSubnet02Block
           - PublicSubnet03Block
-          - PublicSubnet04Block
-          - PublicSubnet05Block
-          - PublicSubnet06Block
+#          - PublicSubnet04Block
+#          - PublicSubnet05Block
+#          - PublicSubnet06Block
           - PrivateSubnet01Block
           - PrivateSubnet02Block
           - PrivateSubnet03Block
@@ -63,20 +63,20 @@ Parameters:
     Default: 10.11.32.0/20
     Description: CidrBlock for public subnet 03 within the VPC
 
-  PublicSubnet04Block:
-    Type: String
-    Default: 10.11.48.0/20
-    Description: CidrBlock for public subnet 04 within the VPC  
-  
-  PublicSubnet05Block:
-    Type: String
-    Default: 10.11.64.0/20
-    Description: CidrBlock for public subnet 05 within the VPC
-
-  PublicSubnet06Block:
-    Type: String
-    Default: 10.11.80.0/20
-    Description: CidrBlock for public subnet 06 within the VPC
+#  PublicSubnet04Block:
+#    Type: String
+#    Default: 10.11.48.0/20
+#    Description: CidrBlock for public subnet 04 within the VPC  
+#  
+#  PublicSubnet05Block:
+#    Type: String
+#    Default: 10.11.64.0/20
+#    Description: CidrBlock for public subnet 05 within the VPC
+#
+#  PublicSubnet06Block:
+#    Type: String
+#    Default: 10.11.80.0/20
+#    Description: CidrBlock for public subnet 06 within the VPC
 
   PrivateSubnet01Block:
     Type: String
@@ -190,50 +190,50 @@ Resources:
       - Key: kubernetes.io/role/elb
         Value: 1
 
-  PublicSubnet04:
-    Type: AWS::EC2::Subnet
-    Metadata:
-      Comment: Public Subnet 04
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PublicSubnet04Block
-      AvailabilityZone: !Ref AvailabilityZoneA
-      MapPublicIpOnLaunch: "true"
-      Tags:
-      - Key: Name
-        Value: !Sub "${AWS::StackName}-PublicSubnet04"
-      - Key: kubernetes.io/role/elb
-        Value: 1
-
-  PublicSubnet05:
-    Type: AWS::EC2::Subnet
-    Metadata:
-      Comment: Public Subnet 05
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PublicSubnet05Block
-      AvailabilityZone: !Ref AvailabilityZoneB
-      MapPublicIpOnLaunch: "true"
-      Tags:
-      - Key: Name
-        Value: !Sub "${AWS::StackName}-PublicSubnet05"
-      - Key: kubernetes.io/role/elb
-        Value: 1
-
-  PublicSubnet06:
-    Type: AWS::EC2::Subnet
-    Metadata:
-      Comment: Public Subnet 06
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PublicSubnet06Block
-      AvailabilityZone: !Ref AvailabilityZoneC
-      MapPublicIpOnLaunch: "true"
-      Tags:
-      - Key: Name
-        Value: !Sub "${AWS::StackName}-PublicSubnet06"
-      - Key: kubernetes.io/role/elb
-        Value: 1
+#  PublicSubnet04:
+#    Type: AWS::EC2::Subnet
+#    Metadata:
+#      Comment: Public Subnet 04
+#    Properties:
+#      VpcId: !Ref VPC
+#      CidrBlock: !Ref PublicSubnet04Block
+#      AvailabilityZone: !Ref AvailabilityZoneA
+#      MapPublicIpOnLaunch: "true"
+#      Tags:
+#      - Key: Name
+#        Value: !Sub "${AWS::StackName}-PublicSubnet04"
+#      - Key: kubernetes.io/role/elb
+#        Value: 1
+#
+#  PublicSubnet05:
+#    Type: AWS::EC2::Subnet
+#    Metadata:
+#      Comment: Public Subnet 05
+#    Properties:
+#      VpcId: !Ref VPC
+#      CidrBlock: !Ref PublicSubnet05Block
+#      AvailabilityZone: !Ref AvailabilityZoneB
+#      MapPublicIpOnLaunch: "true"
+#      Tags:
+#      - Key: Name
+#        Value: !Sub "${AWS::StackName}-PublicSubnet05"
+#      - Key: kubernetes.io/role/elb
+#        Value: 1
+#
+#  PublicSubnet06:
+#    Type: AWS::EC2::Subnet
+#    Metadata:
+#      Comment: Public Subnet 06
+#    Properties:
+#      VpcId: !Ref VPC
+#      CidrBlock: !Ref PublicSubnet06Block
+#      AvailabilityZone: !Ref AvailabilityZoneC
+#      MapPublicIpOnLaunch: "true"
+#      Tags:
+#      - Key: Name
+#        Value: !Sub "${AWS::StackName}-PublicSubnet06"
+#      - Key: kubernetes.io/role/elb
+#        Value: 1
 #####################################################################
 # Create-Public-RouteTable:
 #####################################################################
@@ -681,17 +681,17 @@ Outputs:
     Description: PublicSubnet03 ID in the VPC
     Value: !Ref PublicSubnet03
 
-  PublicSubnet04:
-    Description: PublicSubnet04 ID in the VPC
-    Value: !Ref PublicSubnet04
-
-  PublicSubnet05:
-    Description: PublicSubnet05 ID in the VPC
-    Value: !Ref PublicSubnet05
-
-  PublicSubnet06:
-    Description: PublicSubnet06 ID in the VPC
-    Value: !Ref PublicSubnet06
+#  PublicSubnet04:
+#    Description: PublicSubnet04 ID in the VPC
+#    Value: !Ref PublicSubnet04
+#
+#  PublicSubnet05:
+#    Description: PublicSubnet05 ID in the VPC
+#    Value: !Ref PublicSubnet05
+#
+#  PublicSubnet06:
+#    Description: PublicSubnet06 ID in the VPC
+#    Value: !Ref PublicSubnet06
 
   PrivateSubnet01:
     Description: PrivateSubnet01 ID in the VPC
