add - istio sample file

--- a/istio/istio-test01-pod.yaml
+++ b/istio/istio-test01-pod.yaml
@@ -18,6 +18,7 @@ spec:
     spec:
       containers:
       - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+      - image: whchoi98/network-multitool
         imagePullPolicy: Always
         name: istio-test-pod
         ports:
